# fabric

./: .gitignore  ActionMan.py  CLAUDE.md  CMakeLists.txt  CONTEXT.md  IMPLEMENTATION_NOTES.md  README.md  clean.sh  compile.sh  configure.sh  manage.py  meson.build  run_tests_individually.sh
cmake/: Constants.g.hh.in  FabricConfig.cmake.in
cmake/modules/: GoogleTest.cmake
docs/: ARCHITECTURE.md  BUILD.md  CONCURRENCY.md  CONTRIBUTING.md  DOCUMENTATION.md  EXAMPLES.md  QUANTUM_FLUCTUATION.md  ROADMAP.md  TECHNICAL_CHALLENGES.md  TESTING.md  architecture.md  contributing.md  examples.md  technical_challenges.md
docs/examples/: basic_component.md  event_handling.md  lifecycle_management.md  perspective_framework.md  plugin_system.md  property_system.md  quantum_fluctuation.md
docs/guides/: CONCURRENCY.md  GRAPH_THEORY.md  IMPLEMENTATION_PATTERNS.md  RESOURCE_HUB_TESTING.md  RESOURCE_MANAGEMENT.md  VON_NEUMANN_GRAPHS.md
docs/tmp_refactor_plan/: ARCHITECTURAL_PLAN.md  BUILD_GUIDE.md  CMakeLists-utils.txt  COMPONENT_FLOW.md  CROSS_PLATFORM_INTEGRATION.md  IMPLEMENTATION_ROADMAP.md  PERSPECTIVE_FLUIDITY.md  QUANTUM_FLUCTUATION.md  README.md  REFACTORING_PLAN.md  RESOURCE_SYSTEM.md  TESTING_BEST_PRACTICES.md  UNIFIED_REFACTORING_PLAN.md  USE_CASES.md  WHAT_WENT_WRONG.md
include/: fabric.h
include/fabric/core/: Command.hh  Component.hh  Constants.g.hh  Event.hh  GraphResourceManager.hh  Lifecycle.hh  Plugin.hh  Reactive.hh  Resource.hh  ResourceHelpers.hh  ResourceHub.hh  Spatial.hh  Temporal.hh  Types.hh
include/fabric/parser/: ArgumentParser.hh  SyntaxTree.hh  Token.hh
include/fabric/ui/: WebView.hh
include/fabric/utils/: AsyncRunner.hh  ConcurrentGraph.hh  CoordinatedGraph.hh  ErrorHandling.hh  LifecycleState.hh  Logging.hh  ResourceLifecycle.hh  SafeGraph.hh  Testing.hh  ThreadPoolExecutor.hh  TimeoutLock.hh  Utils.hh
src/: ArgumentParser.cc  ArgumentParser.cpp  ArgumentParser.h  ArgumentParser.hh  Constants.g.h  Constants.g.hh  ErrorHandling.cc  ErrorHandling.cpp  ErrorHandling.h  ErrorHandling.hh  Fabric.cc  Logging.cc  Logging.cpp  Logging.hh  SyntaxTree.cc  SyntaxTree.cpp  SyntaxTree.h  SyntaxTree.hh  Token.h  Token.hh  TokenTypes.h  Utils.cc  WebView.cc  WebView.hh  fabric.cpp
src/core/: Command.cc  Component.cc  Event.cc  Fabric.cc  GraphResourceManager.cc  Lifecycle.cc  Plugin.cc  Reactive.cc  Resource.cc  ResourceHub.cc  Spatial.cc  Temporal.cc
src/parser/: ArgumentParser.cc  SyntaxTree.cc
src/ui/: WebView.cc
src/utils/: ErrorHandling.cc  Logging.cc  ThreadPoolExecutor.cc  Utils.cc
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  FabricE2ETest.cc
tests/integration/: CMakeLists.txt  ComponentLifecycleIntegrationTest.cc  ParserLoggingIntegrationTest.cc  QuantumFluctuationIntegrationTest.cc
tests/unit/: CMakeLists.txt
tests/unit/core/: CMakeLists.txt  CommandTest.cc  ComponentTest.cc  ConcurrentGraphTest.cc  CoreApiTest.cc  EventTest.cc  GraphResourceManagerTest.cc  LifecycleTest.cc  PluginTest.cc  ReactiveTest.cc  ResourceHubTest.cc  ResourceTest.cc  SpatialTest.cc  TemporalTest.cc
tests/unit/parser/: ArgumentParserTest.cc  CMakeLists.txt
tests/unit/ui/: CMakeLists.txt  WebViewTest.cc
tests/unit/utils/: CMakeLists.txt  CoordinatedGraphTest.cc  ErrorHandlingTest.cc  LoggingTest.cc  UtilsTest.cc
tmp_refactor_plan/: CMakeLists-core.txt  CMakeLists-tests.txt  REFACTORING_PLAN.md  ResourceDependencyManager.hh  ResourceHub.hh  ResourceLoader.hh  ResourceMemoryManager.hh  ResourceThreadPool.hh  ThreadSafeQueue.hh
